Stop stupid window activation bug. Clean up code.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5359 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -185,6 +185,7 @@
     <Component class="javax.swing.JLabel" name="fpsLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="playback fps:"/>
+        <Property name="focusable" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="abortButton">
@@ -227,6 +228,7 @@
           <Image iconType="3" name="/org/micromanager/icons/control_pause.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Pause acquisition"/>
+        <Property name="focusable" type="boolean" value="false"/>
         <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
           <Insets value="[0, 0, 0, 0]"/>
         </Property>
